# Arcana

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx
backend/: .gitignore  index.ts  package-lock.json  package.json  tsconfig.json
soroban/: .gitignore  Cargo.toml  README.md  package.json
soroban/scripts/: deploy.sh
soroban/src/: lib.rs
soroban/tests/: arcana_profile_test.rs
